@@ -88,6 +88,10 @@ Don't use C<mod_perl> to write web applications
 
 Always use the three-argument form of C<open()>
 
+=item L<Perl::Critic::Policy::Freenode::OverloadOptions>
+
+Don't use L<overload> without specifying a bool overload and enabling fallback
+
 =item L<Perl::Critic::Policy::Freenode::POSIXImports>
 
 Don't use L<POSIX> without specifying an import list
